# docs/swagger.yaml
@@ -132,11 +132,38 @@ definitions:
       updated_at:
         type: integer
     type: object
+  model.CargoProcess:
+    properties:
+      cargo_id:
+        description: 关联货品 cargo
+        type: integer
+      created_at:
+        type: integer
+      is_exact:
+        description: 是否精准
+        type: boolean
+      max_use:
+        description: 当用量是精准时， 取最大值， 否则为区间
+        type: number
+      measure_id:
+        description: 计量单位 关联 measure
+        type: integer
+      min_use:
+        description: 当用量是精准时， 取最大值， 否则为区间
+        type: number
+      order:
+        description: 生产顺序
+        type: integer
+      process_id:
+        type: integer
+      updated_at:
+        type: integer
+    type: object
   model.Measure:
     properties:
       calc:
-        description: 换算公式
-        type: string
+        description: 换算比例
+        type: number
       cargo_id:
         description: 关联货品
         type: integer
@@ -351,6 +378,58 @@ paths:
           schema:
             $ref: '#/definitions/dto.CargoKindWithAttrs'
       summary: 获取货品详情
+  /cargo_process:
+    post:
+      description: 新增制品生产流程
+      parameters:
+      - description: 文件
+        in: body
+        name: processes
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/model.CargoProcess'
+          type: array
+      responses:
+        "200":
+          description: status 200 表示成功 否则提示msg内容
+          schema:
+            $ref: '#/definitions/api.Response'
+      summary: 新增制品生产流程
+    put:
+      description: 修改制品生产流程
+      parameters:
+      - description: 文件
+        in: body
+        name: processes
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/model.CargoProcess'
+          type: array
+      responses:
+        "200":
+          description: status 200 表示成功 否则提示msg内容
+          schema:
+            $ref: '#/definitions/api.Response'
+      summary: 修改制品生产流程
+  /cargo_process/{cargo_id}:
+    put:
+      description: 通过cargo_id制品生产流程
+      parameters:
+      - description: 货品ID
+        in: path
+        name: cargo_id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: status 200 表示成功 否则提示msg内容
+          schema:
+            items:
+              $ref: '#/definitions/model.CargoProcess'
+            type: array
+      summary: 获取制品生产流程
   /image:
     post:
       description: 上传图片
